Thu Jan 29 11:22:19 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/raddrinfo.c (inspect_sockaddr): if defined AF_INET6,
	  perhaps can inspect IPv6 addresses if not defined INET6.

	* ext/socket/spclet.c (socket_s_ip_address_list): support Windows XP
	  or later. (Win2k or earlier is still not supported)

Thu Jan 29 00:24:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/zlib/zlib.c (zstream_run): previous change didn't resolve the
	  problem.

Wed Jan 28 22:51:12 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/zlib/zlib.c (zstream_run): desperately guard the variable.
	  [ruby-core:20576]

Wed Jan 28 15:24:11 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* math.c: SEGV is caused by implicit rb_to_float declaration
	  test_complexrational.rb: [BUG] in IA-64 architecture

Tue Jan 27 20:02:07 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (socks_connect_blocking): moved from
	  sockssocket.c.  [ruby-dev:37834]

	* sockssocket.c (socks_init): don't omit "int" type.

Tue Jan 27 14:41:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (RUBYDEF): needs DATA marks to export
	  non-function symbols.  [ruby-core:21582]

	* win32/mkexports.rb (Exports::Mingw#each_export): ditto.

Tue Jan 27 12:59:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/ripper/depend: use VPATH.
	  If a platform doesn't support VPATH, Ruby doesn't support it:
	  for exapmle MSYS. [ruby-core:21570]

Tue Jan 27 12:21:17 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/ripper/depend: lex.c's correct path is ../../lex.c.

Tue Jan 27 11:09:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (try_header): checks the header depending on
	  platform.

	* lib/mkmf.rb (have_header, find_header): use try_header.

	* win32/Makefile.sub (try_header): uses try_compile to get rid of
	  slow -E option of VC.

Tue Jan 27 11:03:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (distclean-enc, realclean-enc): do not call clean of