@@ -1,3 +1,7 @@
+Thu Jan 29 12:18:54 2009  Technorama Ltd.  <oss-ruby@technorama.net>
+
+	* lib/securerandom.rb: new method SecureRandom#uuid
+
 Thu Jan 29 11:22:19 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/raddrinfo.c (inspect_sockaddr): if defined AF_INET6,
